--- a/sobitiya/folder/style.css
+++ b/sobitiya/folder/style.css
@@ -20,3 +20,27 @@ a {
     font-style: bold;
     font-size: 24px;
 }
+
+.bigBox {
+    margin: 5px;
+    width: 350px;
+    height: 350px;
+    border: 2px solid chocolate;
+}
+
+.smallBox {
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    position: relative;
+}
+
+.btn-block {
+    background-color: burlywood;
+    padding: 5px;
+}
+
+.btn-block button {
+    height: 25px;
+    width: 100px;
+}
